k8s/telemetry/elastic/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: elastic-stack
  name: kibana-ingress
spec:
  rules:
    - host: kibana.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-eck-kibana-kb-http
                port:
                  number: 5601
